infrastructure/kubernetes/gateway/httproute-user-service.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: user-service-route
  namespace: sandbox
spec:
  parentRefs:
    - name: sandbox-gateway
      namespace: sandbox
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/users
      backendRefs:
        - name: user-service
          port: 80
  # TODO ZAT-193: ajouter HTTPRoute order-service et notification-service quand déployés sur K8s
